[tool.poetry]
name = "python-bsblan"
version = "0.0.0"
description = "Asynchronous Python client for BSBLAN"
authors = ["Willem-Jan van Rootselaar <liudgervr@gmail.com>"]
maintainers = ["Willem-Jan van Rootselaar <liudgervr@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/liudger/python-bsblan"
repository = "https://github.com/liudger/python-bsblan"
documentation = "https://github.com/liudger/python-bsblan"
keywords = ["bsblan", "thermostat", "client" , "api"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Framework :: AsyncIO",
  "Intended Audience :: Developers",
  "Natural Language :: English",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
packages = [
  { include = "bsblan", from = "src" },
]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
aiohttp = ">=3.8.1"
yarl = ">=1.7.2"
pydantic = ">=1.9.0"
packaging = ">=21.3"
ruff = "^0.0.259"

[tool.poetry.dev-dependencies]
aresponses = "^2.1.6"
black = "^22.12.0"
blacken-docs = "^1.13.0"
coverage = "^7.0.5"
flake8 = "^4.0.1"
isort = "^5.11.4"
mypy = "^0.991"
pre-commit = "^2.21.0"
pre-commit-hooks = "^4.3.0"
pylint = "^2.15.10"
pytest = "^7.2.1"
pytest-asyncio = "^0.20.3"
pytest-cov = "^4.0.0"
yamllint = "^1.29.0"
pyupgrade = "^3.3.1"
flake8-simplify = "^0.19.3"
vulture = "^2.7"
flake8-bandit = "^3.0.0"
flake8-bugbear = "^23.1.17"
flake8-builtins = "^2.1.0"
flake8-comprehensions = "^3.10.1"
flake8-eradicate = "^1.4.0"
flake8-markdown = "^0.3.0"
darglint = "^1.8.1"
safety = "^2.3.4"
codespell = "^2.2.2"
bandit = "^1.7.4"
pytest-mock = "^3.10.0"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/liudger/python-bsblan/issues"
Changelog = "https://github.com/liudger/python-bsblan/releases"

[tool.coverage.report]
show_missing = true
fail_under = 53

[tool.coverage.run]
plugins = ["covdefaults"]
source = ["bsblan"]

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
# Specify the target platform details in config, so your developers are
# free to run mypy on Windows, Linux, or macOS and get consistent
# results.
platform = "linux"
python_version = "3.10"

# show error messages from unrelated files
follow_imports = "normal"

# suppress errors about unsatisfied imports
ignore_missing_imports = true

# be strict
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
no_implicit_reexport = true
strict_optional = true
warn_incomplete_stub = true
warn_no_return = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true

[tool.pylint.MASTER]
extension-pkg-whitelist = [
  "pydantic"
]
ignore= [
  "tests"
]

[tool.pylint.BASIC]
good-names = [
    "_",
    "ex",
    "fp",
    "i",
    "id",
    "j",
    "k",
    "on",
    "Run",
    "T",
]

[tool.pylint."MESSAGES CONTROL"]
disable= [
    "too-few-public-methods",
    "duplicate-code",
    "format",
    "unsubscriptable-object",
]

[tool.pylint.SIMILARITIES]
ignore-imports = true
# Minimum lines number of a similarity.
min-similarity-lines = 4

[tool.pylint.FORMAT]
max-line-length=88

[tool.pylint.DESIGN]
max-attributes = 20

[tool.pytest.ini_options]
addopts = "--cov"
asyncio_mode = "auto"

[tool.ruff]
select = ["ALL"]
ignore = [
  "ANN101", # Self... explanatory
  "ANN401", # Opinioated warning on disallowing dynamically typed expressions
  "D203", # Conflicts with other rules
  "D213", # Conflicts with other rules
  "D417", # False positives in some occasions
  "PLR2004", # Just annoying, not really useful
]

[tool.ruff.flake8-pytest-style]
mark-parentheses = false
fixture-parentheses = false

[tool.ruff.isort]
known-first-party = ["wled"]

[tool.ruff.mccabe]
max-complexity = 25

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
